group 'me.bramhaag'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'com.github.johnrengelman.shadow'

sourceCompatibility = 1.8
compileJava.options.encoding = 'UTF-8'

buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
    }
}

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'net.dv8tion:JDA:3.0.0_175'
    compile 'commons-io:commons-io:2.5'
    compile 'com.google.guava:guava:21.0'
    compile 'jmagick:jmagick:6.6.9'

    compileOnly "org.projectlombok:lombok:1.16.14"
}

jar {
    manifest {
        attributes(
                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
                'Main-Class': 'me.bramhaag.discordselfbot.Main'
        )
    }
}
